force-app/main/default/objects/HomologationForm__c/HomologationForm__c.object-meta.xml
<CustomObject>
    <label>Homologation Form</label>
    <nameField>
        <label>Homologation Form</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homologation Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>