force-app/main/default/objects/HomologationForm__c/fields/Account_in_Mode__c.field-meta.xml
<CustomField>
    <fullName>Account_in_Mode__c</fullName>
    <label>Account in Mode:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>