force-app/main/default/objects/HomologationForm__c/fields/Account_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Request_Date__c</fullName>
    <label>Account Request Date</label>
    <type>Date</type>
</CustomField>