force-app/main/default/objects/HomologationForm__c/fields/AccountModel__c.field-meta.xml
<CustomField>
    <fullName>AccountModel__c</fullName>
    <label>Account Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Account</fullName>
            </value>
            <value>
                <fullName>Two Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>