force-app/main/default/objects/HomologationForm__c/fields/Activate_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Activate_Wallet__c</fullName>
    <label>Activate Wallet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple Pay</fullName>
            </value>
            <value>
                <fullName>Google Pay</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>