force-app/main/default/objects/HomologationForm__c/fields/Additional_for_Remote_Payments_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Additional_for_Remote_Payments_Fixed__c</fullName>
    <label>Additional for Remote Payments (Fixed)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>