force-app/main/default/objects/HomologationForm__c/fields/Additional_for_Remote_Payments_Variable__c.field-meta.xml
<CustomField>
    <fullName>Additional_for_Remote_Payments_Variable__c</fullName>
    <label>Additional for Remote Payments (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>