force-app/main/default/objects/HomologationForm__c/fields/AgendaDeLiberacao__c.field-meta.xml
<CustomField>
    <fullName>AgendaDeLiberacao__c</fullName>
    <label>Payment Release Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
                <default>true</default>
                <label>Sim</label>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>