force-app/main/default/objects/HomologationForm__c/fields/Allow_CPF_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>Allow_CPF_CNPJ__c</fullName>
    <label>Allow CPF/CNPJ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPF</fullName>
            </value>
            <value>
                <fullName>CNPJ</fullName>
            </value>
            <value>
                <fullName>Ambos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>