force-app/main/default/objects/HomologationForm__c/fields/AlreadyRequestedReclameAqui__c.field-meta.xml
<CustomField>
    <fullName>AlreadyRequestedReclameAqui__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Já solicitei Reclame aqui</label>
    <type>Checkbox</type>
</CustomField>