force-app/main/default/objects/HomologationForm__c/fields/API_Fixed__c.field-meta.xml
<CustomField>
    <fullName>API_Fixed__c</fullName>
    <label>API (Fixed)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>