force-app/main/default/objects/HomologationForm__c/fields/API_Variable__c.field-meta.xml
<CustomField>
    <fullName>API_Variable__c</fullName>
    <label>API (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>