force-app/main/default/objects/HomologationForm__c/fields/BankSlipSmsService__c.field-meta.xml
<CustomField>
    <fullName>BankSlipSmsService__c</fullName>
    <label>Bank Slip SMS Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Bank Slip Confirmation</fullName>
            </value>
            <value>
                <fullName>Bank Slip Reminder</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>