force-app/main/default/objects/HomologationForm__c/fields/BlockRefund__c.field-meta.xml
<CustomField>
    <fullName>BlockRefund__c</fullName>
    <label>Block Refund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_and_No</valueSetName>
    </valueSet>
</CustomField>