force-app/main/default/objects/HomologationForm__c/fields/Boleto_PIX_Flash_confirmation_reminder__c.field-meta.xml
<CustomField>
    <fullName>Boleto_PIX_Flash_confirmation_reminder__c</fullName>
    <description>It is mandatory to send email confirmation to your end customer with the generated Boleto URL/PIX code once an order is placed. Emails should always include the Boleto URL/PIX code. This procedure is extremely important to increase your payment conversions.
PagBrasil offers both services with customizable features on behalf of your company. The order confirmation email/SMS is sent when a Boleto/PIX is generated, and the reminder email/SMS is sent two days before the Boleto’s/PIX’s expiration date.
Notifications should be sent at two different moments:
a) Order confirmation: when the order is created, and the Boleto/PIX is generated
b) Due date reminder: 1 or 2 days before the Boleto/PIX due date.</description>
    <inlineHelpText>It is mandatory to send email confirmation to your end customer with the generated Boleto URL/PIX code once an order is placed. Emails should always include the Boleto URL/PIX code. PagBrasil offers both services with customizable features on behalf of your company.
Notifications should be sent at two different moments:
a) Order confirmation: when the order is created, and the Boleto/PIX is generated
b) Due date reminder: 1 or 2 days before the Boleto/PIX due date.</inlineHelpText>
    <label>Boleto &amp; PIX Flash confirmation/reminder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I will use the PagBrasil solution, and I want to activate it (it may be subject to fees. Check your proposal/contract)</fullName>
            </value>
            <value>
                <fullName>I will use my solution for sending order confirmation and reminders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>