force-app/main/default/objects/HomologationForm__c/fields/BoletoFlash__c.field-meta.xml
<CustomField>
    <fullName>BoletoFlash__c</fullName>
    <label>F = Boleto Flash</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>