force-app/main/default/objects/HomologationForm__c/fields/Cancellation_policy__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_policy__c</fullName>
    <label>Cancellation policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>