force-app/main/default/objects/HomologationForm__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Encomendas Internacionais (12036)</fullName>
            </value>
            <value>
                <fullName>Serviços (47197)</fullName>
            </value>
            <value>
                <fullName>Manutenção de residentes (37011)</fullName>
            </value>
            <value>
                <fullName>Serviços de educação (47719)</fullName>
            </value>
            <value>
                <fullName>Softwares (47551)</fullName>
            </value>
            <value>
                <fullName>Direitos autorais (47582)</fullName>
            </value>
            <value>
                <fullName>Outros seguros diretos - Prêmio (27083)</fullName>
            </value>
            <value>
                <fullName>Demais soluções de pagamentos digitais (34021)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>