force-app/main/default/objects/HomologationForm__c/fields/Checkout_Boleto_Flash__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Boleto_Flash__c</fullName>
    <label>Checkout Boleto Flash</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>