force-app/main/default/objects/HomologationForm__c/fields/Checkout_PagBrasil_Pix__c.field-meta.xml
<CustomField>
    <fullName>Checkout_PagBrasil_Pix__c</fullName>
    <label>Checkout PagBrasil Pix</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>