force-app/main/default/objects/HomologationForm__c/fields/Company_Email_SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>Company_Email_SMS_Template__c</fullName>
    <label>Add Your Company Email/SMS Template</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>