force-app/main/default/objects/HomologationForm__c/fields/CompanyDetails__c.field-meta.xml
<CustomField>
    <fullName>CompanyDetails__c</fullName>
    <description>Add your company details (corporate name, e.g., &quot;ABC Inc.&quot; and registered address with city and country) in one of the following locations:</description>
    <inlineHelpText>Add your company details (corporate name, e.g., &quot;ABC Inc.&quot; and registered address with city and country) in one of the following locations:</inlineHelpText>
    <label>Company Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rodapé do site</fullName>
            </value>
            <value>
                <fullName>Página sobre nós ou similar</fullName>
                <label>Página “sobre nós” ou similar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>