force-app/main/default/objects/HomologationForm__c/fields/Contact_email_for_notification__c.field-meta.xml
<CustomField>
    <fullName>Contact_email_for_notification__c</fullName>
    <label>Contact email for notification</label>
    <type>Email</type>
</CustomField>