force-app/main/default/objects/HomologationForm__c/fields/ContactInformation__c.field-meta.xml
<CustomField>
    <fullName>ContactInformation__c</fullName>
    <label>Contact Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formulário de contato e/ou endereço de e-mail</fullName>
            </value>
            <value>
                <fullName>Número de telefone brasileiro para contato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>