force-app/main/default/objects/HomologationForm__c/fields/CreditCardRecurrence__c.field-meta.xml
<CustomField>
    <fullName>CreditCardRecurrence__c</fullName>
    <inlineHelpText>Ativação da tokenizaçao do cartão para compras à vista.</inlineHelpText>
    <label>Credit Card Recurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_and_No</valueSetName>
    </valueSet>
</CustomField>