force-app/main/default/objects/HomologationForm__c/fields/CustomsFee__c.field-meta.xml
<CustomField>
    <fullName>CustomsFee__c</fullName>
    <label>Taxa alfandegaria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>O aviso de que impostos podem ser cobrados está na página de checkout antes de finalizar o pagamento</fullName>
            </value>
            <value>
                <fullName>O aviso de que impostos podem ser cobrados está na página Termos e Condições, Política de Entrega ou FAQ</fullName>
            </value>
            <value>
                <fullName>O aviso de que impostos podem ser cobrados está no e-mail de confirmação do pedido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>