force-app/main/default/objects/HomologationForm__c/fields/DebitoDebitoFlash__c.field-meta.xml
<CustomField>
    <fullName>DebitoDebitoFlash__c</fullName>
    <label>D = Cartão de Débito/Débito Flash</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Débito Flash (3DS 2)</fullName>
            </value>
            <value>
                <fullName>Débito convencional (3DS 1)</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>