force-app/main/default/objects/HomologationForm__c/fields/DefaultSoftDescriptor__c.field-meta.xml
<CustomField>
    <fullName>DefaultSoftDescriptor__c</fullName>
    <description>Please inform the end customer that their credit card statement will show &quot;PB*XXXXXX, PORTO ALEGRE&quot; (XXXXXX will be replaced with your store&apos;s name). The soft descriptor is crucial to avoid chargebacks since most occur because the cardholder needs to identify the store&apos;s name or the city where we are located.</description>
    <inlineHelpText>Please inform the end customer that their credit card statement will show &quot;PB*XXXXXX, PORTO ALEGRE&quot; (XXXXXX will be replaced with your store&apos;s name). The soft descriptor is crucial to avoid chargebacks since most occur because the cardholder needs to identify the store&apos;s name or the city where we are located.</inlineHelpText>
    <label>Default Soft Descriptor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>