force-app/main/default/objects/HomologationForm__c/fields/DeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTime__c</fullName>
    <label>Prazo de Entrega</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>O prazo de entrega é calculado na página de checkout antes de concluir o pagamento</fullName>
            </value>
            <value>
                <fullName>O tempo médio de entrega é mostrado na página Termos e Condições, Política de Entrega ou FAQ</fullName>
            </value>
            <value>
                <fullName>O prazo de entrega é informado no e-mail de confirmação do pedido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>