force-app/main/default/objects/HomologationForm__c/fields/Email_s_for_notification_of_pre_auths__c.field-meta.xml
<CustomField>
    <fullName>Email_s_for_notification_of_pre_auths__c</fullName>
    <label>Email(s) for notification of pre-auths</label>
    <type>TextArea</type>
</CustomField>