force-app/main/default/objects/HomologationForm__c/fields/Email_to_Receive_Account_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Email_to_Receive_Account_Instructions__c</fullName>
    <label>Email to Receive Account Instructions</label>
    <type>Email</type>
</CustomField>