force-app/main/default/objects/HomologationForm__c/fields/EmailPackage__c.field-meta.xml
<CustomField>
    <fullName>EmailPackage__c</fullName>
    <label>Email Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Packages</valueSetName>
    </valueSet>
</CustomField>