force-app/main/default/objects/HomologationForm__c/fields/EmailsPodManager__c.field-meta.xml
<CustomField>
    <fullName>EmailsPodManager__c</fullName>
    <label>E-mail(s) Gerente de POD</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>