force-app/main/default/objects/HomologationForm__c/fields/ERede__c.field-meta.xml
<CustomField>
    <fullName>ERede__c</fullName>
    <label>e-Rede</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>