force-app/main/default/objects/HomologationForm__c/fields/EvidenceCompanyDetails__c.field-meta.xml
<CustomField>
    <fullName>EvidenceCompanyDetails__c</fullName>
    <label>Evidências Detalhes da empresa</label>
    <length>16000</length>
    <type>Html</type>
</CustomField>