force-app/main/default/objects/HomologationForm__c/fields/EvidenceContactInformation__c.field-meta.xml
<CustomField>
    <fullName>EvidenceContactInformation__c</fullName>
    <label>Evidências Informações de Contato</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>