force-app/main/default/objects/HomologationForm__c/fields/EvidenceCustomsFee__c.field-meta.xml
<CustomField>
    <fullName>EvidenceCustomsFee__c</fullName>
    <label>Evidence of Custom Duties</label>
    <length>16000</length>
    <type>Html</type>
</CustomField>