force-app/main/default/objects/HomologationForm__c/fields/EvidenceDeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>EvidenceDeliveryTime__c</fullName>
    <label>Evidências Prazo de Entrega</label>
    <length>16000</length>
    <type>Html</type>
</CustomField>