force-app/main/default/objects/HomologationForm__c/fields/EvidenceGateway__c.field-meta.xml
<CustomField>
    <fullName>EvidenceGateway__c</fullName>
    <label>Evidências Gateway</label>
    <length>16000</length>
    <type>Html</type>
</CustomField>