force-app/main/default/objects/HomologationForm__c/fields/EvidenceInfoValidator__c.field-meta.xml
<CustomField>
    <fullName>EvidenceInfoValidator__c</fullName>
    <label>Evidências Validador Info</label>
    <length>16000</length>
    <type>Html</type>
</CustomField>