force-app/main/default/objects/HomologationForm__c/fields/EvidencePriceFormat__c.field-meta.xml
<CustomField>
    <fullName>EvidencePriceFormat__c</fullName>
    <label>Evidence of Price Format</label>
    <length>16000</length>
    <type>Html</type>
</CustomField>