force-app/main/default/objects/HomologationForm__c/fields/EvidenceReclameAqui__c.field-meta.xml
<CustomField>
    <fullName>EvidenceReclameAqui__c</fullName>
    <label>Evidence of Reclame Aqui</label>
    <length>16000</length>
    <type>Html</type>
</CustomField>