force-app/main/default/objects/HomologationForm__c/fields/EvidenceResponseTime__c.field-meta.xml
<CustomField>
    <fullName>EvidenceResponseTime__c</fullName>
    <label>Evidências Tempo de Resposta</label>
    <length>16000</length>
    <type>Html</type>
</CustomField>