force-app/main/default/objects/HomologationForm__c/fields/EvidenceShippingProofPod__c.field-meta.xml
<CustomField>
    <fullName>EvidenceShippingProofPod__c</fullName>
    <label>Evidence of Proof of Delivery (POD)</label>
    <length>16000</length>
    <type>Html</type>
</CustomField>