force-app/main/default/objects/HomologationForm__c/fields/EvidenceZipCodeValidator__c.field-meta.xml
<CustomField>
    <fullName>EvidenceZipCodeValidator__c</fullName>
    <label>Evidências Verificação e Validador CEP</label>
    <length>16000</length>
    <type>Html</type>
</CustomField>