force-app/main/default/objects/HomologationForm__c/fields/FlashBoleto__c.field-meta.xml
<CustomField>
    <fullName>FlashBoleto__c</fullName>
    <label>Boleto Flash</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>