force-app/main/default/objects/HomologationForm__c/fields/Has_Bank_Slip_Alert__c.field-meta.xml
<CustomField>
    <fullName>Has_Bank_Slip_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B = Bank Slip</label>
    <type>Checkbox</type>
</CustomField>