force-app/main/default/objects/HomologationForm__c/fields/Has_Boleto_Flash_Alert__c.field-meta.xml
<CustomField>
    <fullName>Has_Boleto_Flash_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F = Boleto Flash</label>
    <type>Checkbox</type>
</CustomField>