force-app/main/default/objects/HomologationForm__c/fields/Has_Credit_Card_Alert__c.field-meta.xml
<CustomField>
    <fullName>Has_Credit_Card_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C = Credit Card</label>
    <type>Checkbox</type>
</CustomField>