force-app/main/default/objects/HomologationForm__c/fields/Has_Debit_Card_Flash_Alert__c.field-meta.xml
<CustomField>
    <fullName>Has_Debit_Card_Flash_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D = Debit Card / Flash Debit</label>
    <type>Checkbox</type>
</CustomField>