force-app/main/default/objects/HomologationForm__c/fields/Has_PB_Checkout_Discount__c.field-meta.xml
<CustomField>
    <fullName>Has_PB_Checkout_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has PB Checkout Discount</label>
    <type>Checkbox</type>
</CustomField>