force-app/main/default/objects/HomologationForm__c/fields/Has_Pix_Alert__c.field-meta.xml
<CustomField>
    <fullName>Has_Pix_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X = Pix</label>
    <type>Checkbox</type>
</CustomField>