force-app/main/default/objects/HomologationForm__c/fields/Has_Shopify_Discount__c.field-meta.xml
<CustomField>
    <fullName>Has_Shopify_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Shopify Discount</label>
    <type>Checkbox</type>
</CustomField>