force-app/main/default/objects/HomologationForm__c/fields/InstallmentRecurrence__c.field-meta.xml
<CustomField>
    <fullName>InstallmentRecurrence__c</fullName>
    <inlineHelpText>Ativação da tokenização do cartão para compras parceladas</inlineHelpText>
    <label>Installment Recurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_and_No</valueSetName>
    </valueSet>
</CustomField>