force-app/main/default/objects/HomologationForm__c/fields/InterestRepassMethodToCustomer__c.field-meta.xml
<CustomField>
    <fullName>InterestRepassMethodToCustomer__c</fullName>
    <label>Interest Transfer Form to the Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automático</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>