force-app/main/default/objects/HomologationForm__c/fields/Invoice_Warning_Location__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Warning_Location__c</fullName>
    <description>Please, add the following sentence in Portuguese &quot;Esta cobrança aparecerá na fatura de seu cartão de crédito como PB*XXXXXX, PORTO ALEGRE&quot; to one of the following locations:</description>
    <inlineHelpText>Please, add the following sentence in Portuguese &quot;Esta cobrança aparecerá na fatura de seu cartão de crédito como PB*XXXXXX, PORTO ALEGRE&quot; to one of the following locations:</inlineHelpText>
    <label>Invoice Warning Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thank you Page</fullName>
            </value>
            <value>
                <fullName>Confirmation E-mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>