force-app/main/default/objects/HomologationForm__c/fields/Is_Store_on_Shopify__c.field-meta.xml
<CustomField>
    <fullName>Is_Store_on_Shopify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Store on Shopify?</label>
    <type>Checkbox</type>
</CustomField>