force-app/main/default/objects/HomologationForm__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <label>E-commerce/checkout URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>