force-app/main/default/objects/HomologationForm__c/fields/main_contact_email__c.field-meta.xml
<CustomField>
    <fullName>main_contact_email__c</fullName>
    <label>Main contact email for the operation</label>
    <type>Email</type>
</CustomField>