force-app/main/default/objects/HomologationForm__c/fields/MccCode__c.field-meta.xml
<CustomField>
    <fullName>MccCode__c</fullName>
    <label>MCC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>