force-app/main/default/objects/HomologationForm__c/fields/MerchantKey__c.field-meta.xml
<CustomField>
    <fullName>MerchantKey__c</fullName>
    <label>Merchant Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>