force-app/main/default/objects/HomologationForm__c/fields/MidMerchantId__c.field-meta.xml
<CustomField>
    <fullName>MidMerchantId__c</fullName>
    <label>MID(Merchant ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>