force-app/main/default/objects/HomologationForm__c/fields/Minimum_Amount_per_Installment__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount_per_Installment__c</fullName>
    <label>Minimum Amount per Installment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>