force-app/main/default/objects/HomologationForm__c/fields/Minimum_Amount_to_Activate_PagShield__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount_to_Activate_PagShield__c</fullName>
    <label>Minimum Amount to Activate PagShield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>