force-app/main/default/objects/HomologationForm__c/fields/Minimum_Remittance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Remittance_Amount__c</fullName>
    <label>Minimum Remittance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>