force-app/main/default/objects/HomologationForm__c/fields/MonthlyInterestOnCustomerInstallments__c.field-meta.xml
<CustomField>
    <fullName>MonthlyInterestOnCustomerInstallments__c</fullName>
    <label>Juros mensal de Parcelamento ao cliente</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>